prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/unfinished_hex.diag.txt
ERROR: expected hex digits after '0x'
testData/diagnostics/unfinished_hex.nut:1:8

println(0x)
        ^-


